--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = kpet
-description = Python library and cli utility to check k8s client configurations
+description = Command line tool to explore the Kubernetes API using Python expressions
 author = João Pinto
 author_email = lamego.pinto@gmail.com
 url = https://github.com/joaompinto/kpet
