--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,10 +16,10 @@ repos:
     - id: debug-statements
     - id: check-docstring-first
 
--   repo: https://github.com/asottile/reorder_python_imports
-    rev: v3.1.0
+-   repo: https://github.com/pycqa/isort
+    rev: 5.10.1
     hooks:
-        - id: reorder-python-imports
+        - id: isort
 
 -   repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.9.0  # Use the ref you want to point at
